# AIPersonalAssistant

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  execution_engine.py  main.py  pyproject.toml  requirements.txt  test_local_services.py  test_microsoft_graph.py  test_workflow.py  verify_setup.py  后续优化计划.md  技术方案文档.md
.github/workflows/: ci.yml
Agents/: __init__.py  graph_builder.py
Agents/nodes/: conflict_detection.py  error_handler.py  execution_engine.py  intent_recognition.py  task_planning.py
agents/: graph_builder.py
agents/nodes/: __init__.py  error_handler.py  intent_recognition.py  time_reasoning.py
agents/prompts/: __init__.py  intent_prompt.py  planning_prompt.py
config/: __init__.py  logging_config.py  settings.py
docs/: MICROSOFT_GRAPH_SETUP.md
models/: __init__.py  agent_state.py  calendar_event.py  email_template.py
services/: __init__.py  auth_service.py  local_calendar.py  smtp_email.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_agent_workflow.py
tests/unit/: test_calendar_tool.py  test_config.py  test_gmail_tool.py  test_nodes.py  test_time_parser.py  test_utils.py
tools/: __init__.py  calendar_tool.py  gmail_tool.py  time_parser.py
utils/: __init__.py  exceptions.py  formatters.py  validators.py
